Home buttons added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DespensApp</string>
+    <string name="InventarioButton">Mis cosas</string>
+    <string name="aComprarButton">Por comprar</string>
+    <string name="TiendaButton">Tiendas</string>
 </resources>
