--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="InventarioButton">Mis cosas</string>
     <string name="aComprarButton">Por comprar</string>
     <string name="TiendaButton">Tiendas</string>
+
+    <string name="NombreProducto">Nombre</string>
+    <string name="CantidadProducto">Cantidad</string>
+
+    <string name="SaveProductButton">Guardar</string>
+    <string name="AddproductButton">Añadir producto</string>
 </resources>
